--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,6 +9,7 @@ provisioner:
 platforms:
   - name: ubuntu-12.04
   - name: ubuntu-14.04
+  - name: ubuntu-16.04
   - name: debian-7.11
   - name: debian-8.5
   - name: centos-6.8
